--- a/app/src/main/res/layout/card_view_device.xml
+++ b/app/src/main/res/layout/card_view_device.xml
@@ -1,29 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/device_card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/device_card_view"
     android:padding="4dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:orientation="vertical">
+        android:paddingBottom="10dp">
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/text_view_device_name"
+            style="@style/TextAppearance.MaterialComponents.Headline6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="10dp"
-            tools:text="Mí celular"
-            android:fontFamily="@font/nunito_bold"
-            android:textColor="@color/black"
-            android:textSize="20dp" />
+            tools:text="Mí celular" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -32,24 +30,22 @@
             android:layout_marginRight="20dp"
             android:orientation="horizontal">
 
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/label_model"
-
+                style="@style/TextAppearance.MaterialComponents.Subtitle2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/label_device_model"
-                android:fontFamily="@font/opensans_light"
-                android:textColor="@color/black"
-                android:textSize="15dp" />
+                android:text="@string/label_device_model" />
 
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/text_view_device_model"
+                style="@style/TextAppearance.MaterialComponents.Body2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/opensans_light"
+
                 android:paddingStart="16dp"
-                android:textColor="@color/black"
-                android:textSize="15dp"
+
+
                 tools:text="Nexus 5" />
         </LinearLayout>
 
@@ -60,23 +56,21 @@
             android:layout_marginRight="20dp"
             android:orientation="horizontal">
 
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/label_imei"
+                style="@style/TextAppearance.MaterialComponents.Subtitle2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/label_imei"
-                android:fontFamily="@font/opensans_light"
-                android:textColor="@color/black"
-                android:textSize="15dp" />
+                android:text="@string/label_imei" />
 
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/text_view_device_imei"
+                style="@style/TextAppearance.MaterialComponents.Body2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/opensans_light"
+
                 android:paddingStart="16dp"
-                android:textColor="@color/black"
-                android:textSize="15dp"
+
                 tools:text="1099193543645091" />
 
         </LinearLayout>
@@ -88,24 +82,24 @@
             android:layout_marginRight="20dp"
             android:orientation="horizontal">
 
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/label_status"
+                style="@style/TextAppearance.MaterialComponents.Subtitle2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/label_device_status"
-                android:fontFamily="@font/opensans_light"
-                android:textColor="@color/black"
-                android:textSize="15dp" />
 
-            <TextView
+                />
+
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/text_view_device_status"
+                style="@style/TextAppearance.MaterialComponents.Body2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/opensans_light"
+
                 android:paddingStart="16dp"
                 android:text="@string/text_status_active"
-                android:textColor="@color/black"
-                android:textSize="15dp"
+
                 tools:text="@string/text_status_active" />
 
         </LinearLayout>
