--- a/app/src/main/res/layout/dialog_success.xml
+++ b/app/src/main/res/layout/dialog_success.xml
@@ -25,8 +25,9 @@
             android:src="@drawable/ic_baseline_check_24" />
 
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/dialog_success_message"
+            style="@style/TextAppearance.MaterialComponents.Caption"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
