--- a/app/src/main/res/drawable/ic_baseline_arrow_forward_ios_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_arrow_forward_ios_24.xml
@@ -3,8 +3,9 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="?attr/colorControlNormal">
-  <path
-      android:fillColor="@android:color/white"
-      android:pathData="M5.88,4.12L13.76,12l-7.88,7.88L8,22l10,-10L8,2z" />
+    android:tint="@android:color/black"
+    android:alpha="0.5">
+    <path
+        android:fillColor="@android:color/white"
+        android:pathData="M5.88,4.12L13.76,12l-7.88,7.88L8,22l10,-10L8,2z" />
 </vector>
