--- a/app/src/main/res/drawable/list_view_divider.xml
+++ b/app/src/main/res/drawable/list_view_divider.xml
@@ -11,7 +11,7 @@
         android:top="14.75dp"
         android:bottom="14.75dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/gray" />
+            <solid android:color="@android:color/darker_gray" />
         </shape>
     </item>
 
