--- a/app/src/main/res/drawable/login_background.xml
+++ b/app/src/main/res/drawable/login_background.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:startColor="@color/white"
-        android:endColor="@color/white"
+        android:startColor="@android:color/white"
+        android:endColor="@android:color/white"
         android:type="linear" />
 </shape>
