--- a/app/src/main/res/drawable/text_cursor_login.xml
+++ b/app/src/main/res/drawable/text_cursor_login.xml
@@ -2,11 +2,11 @@
 <inset xmlns:android="http://schemas.android.com/apk/res/android"
     android:inset="2dp">
     <shape
-        android:tint="@color/white"
+        android:tint="@android:color/white"
         android:shape="rectangle">
         <size
             android:height="2dp"
             android:width="2dp" />
-        <solid android:color="@color/white" />
+        <solid android:color="@android:color/white" />
     </shape>
 </inset>
