--- a/app/src/main/res/layout/calendar_month_layout.xml
+++ b/app/src/main/res/layout/calendar_month_layout.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:background="@color/black"
+    tools:background="@android:color/black"
     android:paddingBottom="18dp"
     android:paddingTop="18dp"
     android:paddingEnd="30sp"
