--- a/app/src/main/res/layout/dialog_login_result.xml
+++ b/app/src/main/res/layout/dialog_login_result.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
@@ -8,27 +9,27 @@
         android:layout_height="match_parent"
         android:paddingBottom="36dp">
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/login_result_title"
             style="@style/TextAppearance.MaterialComponents.Headline5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="28dp"
-            android:text="TextView"
+            tools:text="Title"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.501"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/login_result_message"
             android:layout_width="wrap_content"
             android:textAlignment="center"
             style="@style/TextAppearance.MaterialComponents.Body1"
             android:layout_height="wrap_content"
             android:layout_marginTop="36dp"
-            android:text="TextView"
+            tools:text="Message"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.501"
             app:layout_constraintStart_toStartOf="parent"
