--- a/app/src/main/res/layout/dialog_notification.xml
+++ b/app/src/main/res/layout/dialog_notification.xml
@@ -17,7 +17,7 @@
         tools:text="06/08/2020" />
 
     <com.google.android.material.textview.MaterialTextView
-        style="@style/TextAppearance.MaterialComponents.Headline6"
+        style="@style/TextAppearance.MaterialComponents.Subtitle2"
         android:id="@+id/text_view_label_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -27,17 +27,17 @@
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/text_view_title_content"
-        style="@style/Custom.Body2"
+        style="@style/TextAppearance.MaterialComponents.Body2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="14dp"
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toEndOf="@+id/text_view_label_title"
         app:layout_constraintTop_toBottomOf="@+id/text_view_sent_date"
         tools:text="@string/title_example" />
 
     <com.google.android.material.textview.MaterialTextView
-        style="@style/TextAppearance.MaterialComponents.Headline6"
+        style="@style/TextAppearance.MaterialComponents.Subtitle2"
         android:id="@+id/text_view_label_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -48,7 +48,7 @@
 
 
     <com.google.android.material.textview.MaterialTextView
-        style="@style/Custom.Body2"
+        style="@style/TextAppearance.MaterialComponents.Body2"
         android:id="@+id/text_view_message_content"
         android:layout_width="0dp"
         android:layout_height="52dp"
