--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?><!-- Fragment to show notifications -->
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <!-- For any reason we can use the main view model as variable here,
@@ -19,8 +21,7 @@
     </data>
 
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -30,7 +31,8 @@
             android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:listitem="@layout/notification_item" />
 
         <!--        android:visibility="@{mainViewModel.notifications.empty? notificationListView.GONE : notificationListView.VISIBLE}"-->
 
@@ -42,7 +44,7 @@
             android:layout_centerVertical="true"
 
             android:text="No hay nuevas notificaciones"
-
+            tools:visibility="invisible"
 
             />
 
