--- a/app/src/main/res/layout/fragment_permission.xml
+++ b/app/src/main/res/layout/fragment_permission.xml
@@ -19,13 +19,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_centerInParent="true"
-            android:layout_centerVertical="true"
-            android:text="No has registrado ningún permiso"
-            android:visibility="gone" />
 
 
         <androidx.recyclerview.widget.RecyclerView
@@ -38,15 +31,16 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:listitem="@layout/permission_item"></androidx.recyclerview.widget.RecyclerView>
+            tools:listitem="@layout/permission_item" />
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/no_permissions"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:text="@string/no_permissions_to_show" />
+            android:text="@string/no_permissions_to_show"
+            tools:visibility="invisible" />
 
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -59,7 +53,8 @@
             android:layout_marginBottom="10dp"
             android:clickable="true"
             android:onClick="@{() -> permissionViewModel.onAddNewPermission(true)}"
-            app:srcCompat="@drawable/ic_add" />
+            app:srcCompat="@drawable/ic_add"
+            android:focusable="true" />
 
     </RelativeLayout>
 </layout>
