--- a/app/src/main/res/layout/notification_item.xml
+++ b/app/src/main/res/layout/notification_item.xml
@@ -13,54 +13,49 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="3dp">
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/textView4"
+            style="@style/TextAppearance.MaterialComponents.Subtitle1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:text="@string/label_notification_title"
-            android:textColor="@color/black"
-            android:textStyle="bold"
             card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/notification_title"
+            style="@style/TextAppearance.MaterialComponents.Caption"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="2dp"
-
+            android:layout_marginStart="8dp"
             android:text="@string/tools_title_example"
-            android:textColor="@color/black"
-            card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toBottomOf="@+id/textView4" />
+            card_view:layout_constraintBaseline_toBaselineOf="@+id/textView4"
+            card_view:layout_constraintStart_toEndOf="@+id/textView4" />
 
-        <TextView
-
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/textView"
+            style="@style/TextAppearance.MaterialComponents.Subtitle1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="6dp"
+            android:layout_marginBottom="4dp"
+
             android:text="@string/label_notification_sent_date"
-            android:textColor="@color/black"
-            android:textStyle="bold"
+            card_view:layout_constraintBottom_toBottomOf="parent"
             card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintTop_toBottomOf="@+id/notification_title" />
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/notification_sent_date"
+            style="@style/TextAppearance.MaterialComponents.Caption"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="2dp"
-            android:layout_marginBottom="8dp"
-            android:textColor="@color/black"
-            card_view:layout_constraintBottom_toBottomOf="parent"
-            card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toBottomOf="@+id/textView"
+            android:layout_marginStart="8dp"
+            card_view:layout_constraintBaseline_toBaselineOf="@+id/textView"
+            card_view:layout_constraintStart_toEndOf="@+id/textView"
             tools:text="@string/tools_date_example" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
