--- a/app/src/main/res/layout/permission_type_element.xml
+++ b/app/src/main/res/layout/permission_type_element.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/textView3"
+        style="@style/TextAppearance.MaterialComponents.Body1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="20dp"
         android:gravity="center"
         android:layout_marginBottom="20dp"
-        android:fontFamily="@font/opensans_light"
         android:textSize="17dp"
-        >
+        tools:text="Vacaciones">
 
-    </TextView>
+    </com.google.android.material.textview.MaterialTextView>
 
 </LinearLayout>
