--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,22 +3,18 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/home_fragment_title" />
+        android:icon="@drawable/ic_dashboard_black_24dp" />
 
     <item
         android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_baseline_chat_bubble_24"
-        android:title="@string/notifications_fragment_title" />
+        android:icon="@drawable/ic_baseline_chat_bubble_24" />
 
     <item
         android:id="@+id/navigation_permission"
-        android:icon="@drawable/ic_permission"
-        android:title="@string/permissions_fragment_title" />
+        android:icon="@drawable/ic_permission" />
 
     <item
         android:id="@+id/navigation_device"
-        android:icon="@drawable/ic_device"
-        android:title="@string/devices_fragment_title" />
+        android:icon="@drawable/ic_device" />
 
 </menu>
