--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#2a84fe</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#1E88E5</color>
-    <color name="black">#000000</color>
-    <color name="gray">#babdbe</color>
-    <color name="white">#FFFFFF</color>
-    <color name="darkBlue">#0C1C33</color>
+    <color name="colorPrimary">#0080FF</color>
+    <color name="colorPrimaryDark">#333333</color>
+    <color name="colorAccent">#73C2FB</color>
+
+
 </resources>
