--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,7 +17,7 @@
     </style>
 
     <style name="NumberPickerTheme" parent="Theme.MaterialComponents.Light">
-        <item name="colorAccent">@color/white</item>
+        <item name="colorAccent">@android:color/white</item>
 
         <!--        <item name="colorControlNormal">@android:color/transparent</item>-->
         <item name="background">@drawable/square_button</item>
@@ -33,16 +33,6 @@
 
     <style name="SplashTheme" parent="AppTheme">
         <item name="android:windowBackground">@drawable/splash</item>
-    </style>
-
-    <style name="titles">
-        <item name="android:fontFamily">@font/nunito_bold</item>
-        <item name="android:textColor">@color/black</item>
-        <item name="android:textSize">20dp</item>
-    </style>
-
-    <style name="Custom.Body2" parent="TextAppearance.MaterialComponents.Body2">
-        <item name="android:textColor">@color/black</item>
     </style>
 
 
