--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,18 +3,22 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_dashboard_black_24dp" />
+        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:title="" />
 
     <item
         android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_baseline_chat_bubble_24" />
+        android:icon="@drawable/ic_baseline_chat_bubble_24"
+        android:title="" />
 
     <item
         android:id="@+id/navigation_permission"
-        android:icon="@drawable/ic_permission" />
+        android:icon="@drawable/ic_permission"
+        android:title="" />
 
     <item
         android:id="@+id/navigation_device"
-        android:icon="@drawable/ic_device" />
+        android:icon="@drawable/ic_device"
+        android:title="" />
 
 </menu>
