--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -105,11 +105,22 @@
                 android:textColorLink="@android:color/white"
                 android:textCursorDrawable="@drawable/text_cursor_login"
                 android:textSize="16sp"
-                app:layout_constraintBottom_toTopOf="@+id/loginButton"
+                app:layout_constraintBottom_toTopOf="@+id/text_view_recover_password"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/email" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/text_view_recover_password"
+                style="@style/TextAppearance.MaterialComponents.Caption"
+                android:textColor="@android:color/white"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="¿Olvidó su contraseña?"
+                app:layout_constraintBottom_toTopOf="@+id/loginButton"
+                app:layout_constraintEnd_toEndOf="@+id/password"
+                app:layout_constraintTop_toBottomOf="@+id/password" />
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/txtBienvenido"
@@ -125,7 +136,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/loginButton" />
 
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/txtIniciarSesion"
                 style="@style/TextAppearance.MaterialComponents.Caption"
                 android:layout_width="wrap_content"
@@ -151,7 +162,7 @@
                 android:text="@string/access_label"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/password" />
+                app:layout_constraintTop_toBottomOf="@+id/text_view_recover_password" />
 
             <ProgressBar
                 android:id="@+id/progressBar"
