--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -43,8 +43,8 @@
             android:layout_marginBottom="20dp"
             android:fontFamily="@font/comfortaa"
             android:text="@string/app_name"
-            android:textColor="@color/colorAccent"
-            android:textSize="30sp"
+            android:textColor="@color/colorPrimary"
+            android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@+id/white_section"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -143,6 +143,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/txtBienvenido"
                 android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
                 android:text="@string/welcome"
                 android:textColor="@android:color/white"
                 app:layout_constraintStart_toStartOf="parent"
