Setup navigation for login activity

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,6 +2,8 @@
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:windowSoftInputMode="stateAlwaysHidden"
     tools:context=".loginactivity.LoginActivity">
 
 
@@ -12,10 +14,13 @@
             type="com.apptec.camello.loginactivity.LoginViewModel" />
     </data>
 
-    <fragment
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/login_nav_host_fragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/login_navigation" />
 
 </layout>
 
