--- a/app/src/main/res/layout/fragment_show_policies.xml
+++ b/app/src/main/res/layout/fragment_show_policies.xml
@@ -1,8 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:windowSoftInputMode="stateAlwaysHidden"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+
+        <variable
+            name="loginViewModel"
+            type="com.apptec.camello.loginactivity.LoginViewModel" />
+
+        <variable
+            name="navDirection"
+            type="androidx.navigation.NavDirections" />
+
+    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -21,10 +33,10 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <com.google.android.material.button.MaterialButton
+        <Button
             android:id="@+id/accept_button"
             android:background="@drawable/accept_button_rounded"
-
+            android:onClick="@{() -> loginViewModel.setNewDestination(navDirection.getActionId())}"
             tools:backgroundTint="@color/colorPrimary"
             tools:textColor="@android:color/white"
 
