--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="colorPrimaryDark">#333333</color>
     <color name="colorAccent">#73C2FB</color>
 
-
+    <color name="darker_gray"></color>
 </resources>
