Completed the method to recover password

--- a/app/src/main/res/layout/dialog_recover_password.xml
+++ b/app/src/main/res/layout/dialog_recover_password.xml
@@ -15,30 +15,30 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="24dp"
-            app:layout_constraintBottom_toTopOf="@+id/dialog_base_message"
+            android:layout_marginBottom="24dp"
+            app:layout_constraintBottom_toTopOf="@+id/recover_password_label"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_chainStyle="packed"
-            android:text="Recuperar contraseña"
+            android:text="@string/recover_password_label"
             android:textColor="@color/colorPrimary" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/recover_password_label"
-            style="@style/TextAppearance.MaterialComponents.Body1"
+            style="@style/TextAppearance.MaterialComponents.Subtitle1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
+            android:text="@string/enter_email"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/dialog_base_title"
-            android:text="Ingrese su correo electrónico" />
+            app:layout_constraintTop_toBottomOf="@+id/dialog_base_title" />
 
         <EditText
             android:id="@+id/input_email"
@@ -46,11 +46,13 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:hint="Correo*"
+            android:hint="@string/recover_password_target_mail"
+            android:inputType="textEmailAddress"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/recover_password_label" />
+            app:layout_constraintTop_toBottomOf="@+id/recover_password_label"
+            android:importantForAutofill="no" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
