--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -78,31 +78,187 @@
         </LinearLayout>
 
         <com.apptec.camello.mainactivity.fhome.ui.CurveBgRelativeLayout
+            android:id="@+id/curveBgRelativeLayout"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginBottom="10dp"
-            android:background="#2a84fe"
+            android:background="@color/colorPrimary"
             android:orientation="vertical"
             app:layout_constraintBottom_toTopOf="@+id/linearLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:foregroundGravity="center_horizontal"
+            app:layout_constraintBottom_toBottomOf="@+id/curveBgRelativeLayout"
+            app:layout_constraintEnd_toEndOf="@+id/curveBgRelativeLayout"
+            app:layout_constraintStart_toStartOf="@+id/curveBgRelativeLayout"
             app:layout_constraintTop_toTopOf="parent">
 
-            <com.kizitonwose.calendarview.CalendarView
-                android:id="@+id/calendarView"
-                android:layout_width="match_parent"
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/textView7"
+                android:textColor="@android:color/white"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:cv_dayViewResource="@layout/calendar_day_layout"
-                app:cv_hasBoundaries="true"
-                app:cv_inDateStyle="allMonths"
-                app:cv_maxRowCount="1"
-                app:cv_monthHeaderResource="@layout/calendar_month_layout"
-                app:cv_orientation="horizontal"
-                app:cv_outDateStyle="endOfRow"
-                app:cv_scrollMode="paged" />
+                android:text="lun"
+                app:layout_constraintEnd_toStartOf="@+id/textView8"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/textView10" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/textView8"
+                android:textColor="@android:color/white"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="mar"
+                app:layout_constraintEnd_toStartOf="@+id/textView9"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/textView7"
+                app:layout_constraintTop_toTopOf="@+id/textView10" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/textView9"
+                android:textColor="@android:color/white"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="mié"
+                app:layout_constraintEnd_toStartOf="@+id/textView10"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/textView8"
+                app:layout_constraintTop_toTopOf="@+id/textView10" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/textView10"
+                android:textColor="@android:color/white"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="jue"
+                app:layout_constraintBottom_toTopOf="@+id/thursday_number"
+                app:layout_constraintEnd_toStartOf="@+id/textView11"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/textView9"
+                app:layout_constraintTop_toBottomOf="@+id/date_label" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/textView11"
+                android:textColor="@android:color/white"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="vie"
+                app:layout_constraintEnd_toStartOf="@+id/textView12"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/textView10"
+                app:layout_constraintTop_toTopOf="@+id/textView10" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/textView12"
+                android:textColor="@android:color/white"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="sáb"
+                app:layout_constraintEnd_toStartOf="@+id/textView13"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/textView11"
+                app:layout_constraintTop_toTopOf="@+id/textView10" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/textView13"
+                android:textColor="@android:color/white"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="dom"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/textView12"
+                app:layout_constraintTop_toTopOf="@+id/textView10" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/date_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/white"
+                app:layout_constraintBottom_toTopOf="@+id/textView10"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_chainStyle="packed"
+                tools:text="agosto 2020" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/monday_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="@+id/textView7"
+                app:layout_constraintStart_toStartOf="@+id/textView7"
+                app:layout_constraintTop_toTopOf="@+id/thursday_number"
+                tools:text="3" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tuesday_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="@+id/textView8"
+                app:layout_constraintStart_toStartOf="@+id/textView8"
+                app:layout_constraintTop_toTopOf="@+id/thursday_number"
+                tools:text="4" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/wednesday_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="@+id/textView9"
+                app:layout_constraintStart_toStartOf="@+id/textView9"
+                app:layout_constraintTop_toTopOf="@+id/thursday_number"
+                tools:text="5" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/thursday_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/textView10"
+                app:layout_constraintStart_toStartOf="@+id/textView10"
+                app:layout_constraintTop_toBottomOf="@+id/textView10"
+                tools:text="6" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/friday_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="@+id/textView11"
+                app:layout_constraintStart_toStartOf="@+id/textView11"
+                app:layout_constraintTop_toTopOf="@+id/monday_number"
+                tools:text="7" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/saturday_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="@+id/textView12"
+                app:layout_constraintStart_toStartOf="@+id/textView12"
+                app:layout_constraintTop_toTopOf="@+id/thursday_number"
+                tools:text="8" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/sunday_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="@+id/textView13"
+                app:layout_constraintStart_toStartOf="@+id/textView13"
+                app:layout_constraintTop_toTopOf="@+id/thursday_number"
+                tools:text="9" />
 
 
-        </com.apptec.camello.mainactivity.fhome.ui.CurveBgRelativeLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
